--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/photogram?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mariadb://localhost:3306/photogramv2?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
     username: cos
     password: cos1234
     
